filter data on property values

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,19 @@ li{
 .error {
   color: red;
 }
+li span.delete-item{
+  visibility: hidden;
+}
+span.delete-item a {
+  text-decoration: none;
+  color:red
+}
+li:hover span.delete-item {
+  visibility: visible;
+}
+.Footer a{
+  padding-right: 5px;
+}
+.Footer a.active{
+  font-weight: bold;
+}
